@@ -9,4 +9,4 @@ extern int absolute_program(const char *string);
 extern char *get_next_path_element(char const* path_list, int *path_index_pointer);
 extern char *make_full_pathname(const char *path, const char *name, int name_len);
 extern int uidget();
-
+extern char* sh_get_home_dir(void);
