@@ -18,18 +18,31 @@
 
    You should have received a copy of the GNU General Public License along
    with Bash; see the file COPYING.  If not, write to the Free Software
-   Foundation, 675 Mass Ave, Cambridge, MA 02139, USA. */
+   Foundation, 59 Temple Place, Suite 330, Boston, MA 02111 USA. */
 
 #if !defined (_STDLIB_H_)
 #define	_STDLIB_H_ 1
 
 /* String conversion functions. */
 extern int atoi ();
-extern long int atol ();
+
+extern double atof ();
+extern double strtod ();
 
 /* Memory allocation functions. */
-extern char *malloc ();
-extern char *realloc ();
+/* Generic pointer type. */
+#ifndef PTR_T
+
+#if defined (__STDC__)
+#  define PTR_T	void *
+#else
+#  define PTR_T char *
+#endif
+
+#endif /* PTR_T */
+
+extern PTR_T malloc ();
+extern PTR_T realloc ();
 extern void free ();
 
 /* Other miscellaneous functions. */
